--- a/custom_components/cync_lights/manifest.json
+++ b/custom_components/cync_lights/manifest.json
@@ -1,14 +1,15 @@
 {
   "domain": "cync_lights",
   "name": "Cync Lights",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "config_flow": true,
-  "documentation": "https://github.com/nikshriv/cync_lights",
+  "documentation": "https://github.com/kartikone/cync_lights",
   "ssdp": [],
   "zeroconf": [],
   "homekit": {},
   "dependencies": [],
   "codeowners": [
+    "@kartikone",
     "@nikshriv"
   ],
   "iot_class": "local_push"
