Revert possible breaking change
Signed-off-by: Kartik Moudgil <mail@kartik.one>

--- a/custom_components/cync_lights/manifest.json
+++ b/custom_components/cync_lights/manifest.json
@@ -7,7 +7,7 @@
   "ssdp": [],
   "zeroconf": [],
   "homekit": {},
-  "dependencies": {},
+  "dependencies": [],
   "codeowners": [
     "@kartikone",
     "@nikshriv"
